force-app/main/default/objects/Daily_Non_ERP_Order__c/Daily_Non_ERP_Order__c.object-meta.xml
<CustomObject>
    <label>Daily Non ERP Order</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Daily Non ERP Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Non ERP Orders</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>