force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>IF(NOT(ISNULL(Sales_Org_Lookup__c)), Sales_Org_Lookup__r.Hierarchy_2__c, &apos;&apos;)</formula>
    <label>Industry</label>
    <type>Text</type>
</CustomField>