force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/Input_Currency__c.field-meta.xml
<CustomField>
    <fullName>Input_Currency__c</fullName>
    <label>Input Currency</label>
    <length>40</length>
    <type>Text</type>
</CustomField>