force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/Input_Sales_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>Input_Sales_Org_Code__c</fullName>
    <label>Input Sales Org Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>