force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/Input_SW_Amount__c.field-meta.xml
<CustomField>
    <fullName>Input_SW_Amount__c</fullName>
    <label>Input SW Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>