force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/Input_Total_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Input_Total_Order_Amount__c</fullName>
    <label>Input Total Order Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>