force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/Master_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Customer_Number__c</fullName>
    <label>Master Customer Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>