force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/Month_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_Start_Date__c</fullName>
    <label>Month Start Date</label>
    <type>Date</type>
</CustomField>