force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/Order_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Order_Quarter__c</fullName>
    <formula>TEXT(YEAR(Order_Date__c)) &amp; &quot; &quot; &amp; &quot;Q&quot; &amp; TEXT(CASE(MONTH(Order_Date__c), 1,1, 2,1, 3,1, 4,2, 5,2, 6,2, 7,3, 8,3, 9,3, 10,4, 11,4, 12,4, 0))</formula>
    <label>Order Quarter</label>
    <type>Text</type>
</CustomField>