force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/PS_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>PS_Amount_USD__c</fullName>
    <label>PS Amount (in USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>