force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/Q1_IN_USD_MIL__c.field-meta.xml
<CustomField>
    <fullName>Q1_IN_USD_MIL__c</fullName>
    <formula>Q1_IN_USD_MIL_6_decimal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 (IN USD MIL)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>