force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/Q3_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Q3_in_USD__c</fullName>
    <description>Q3 value in USD.</description>
    <formula>IF(AND(YEAR(Order_Date__c) = YEAR(TODAY()), 
OR(MONTH(Order_Date__c) = 7, MONTH(Order_Date__c) = 8,MONTH(Order_Date__c) = 9)), 
Total_Order_Amount_USD__c/1000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 (in USD Thousands)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>