force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/Sales_Org_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Org Lookup</label>
    <referenceTo>Sales_Org_Temp__c</referenceTo>
    <relationshipLabel>Daily Non ERP Orders</relationshipLabel>
    <relationshipName>Daily_Non_ERP_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>