force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/Salesperson_Quicklook_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Quicklook_ID__c</fullName>
    <label>Salesperson Quicklook ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>