force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <formula>IF(NOT(ISNULL(Sales_Org_Lookup__c)), Sales_Org_Lookup__r.Hierarchy_4__c, &apos;&apos;)</formula>
    <label>Sub Region</label>
    <type>Text</type>
</CustomField>