force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/Total_Order_Amount_Local__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Amount_Local__c</fullName>
    <label>Total Order Amount (in Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>