force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/TS_Amount_in_Local__c.field-meta.xml
<CustomField>
    <fullName>TS_Amount_in_Local__c</fullName>
    <label>TS Amount (in Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>