force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/TS_Amount_in_USD__c.field-meta.xml
<CustomField>
    <fullName>TS_Amount_in_USD__c</fullName>
    <label>TS Amount (in USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>