force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/WTD__c.field-meta.xml
<CustomField>
    <fullName>WTD__c</fullName>
    <formula>IF( AND(TODAY() &gt;=  Week_Start_Date__c, TODAY() &lt;= Week_End_Date__c ),  Total_Order_Amount_USD__c/1000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WTD (in USD Thousands)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>