force-app/main/default/objects/Daily_Non_ERP_Order__c/fields/YTD__c.field-meta.xml
<CustomField>
    <fullName>YTD__c</fullName>
    <formula>IF(YEAR(Order_Date__c) = YEAR(TODAY()), Total_Order_Amount_USD__c/1000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD (in USD Thousands)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>