force-app/main/default/objects/Daily_Non_ERP_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Salesperson_Global_ID__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Total_Order_Amount_USD__c</columns>
    <columns>Input_Currency__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Enterprise_ID__c</columns>
    <columns>Master_Customer_Number__c</columns>
    <columns>Customer_Country_Code__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Source_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>