force-app/main/default/objects/Daily_Non_ERP_Order__c/listViews/View_Recently_Created_Updated.listView-meta.xml
<ListView>
    <fullName>View_Recently_Created_Updated</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer_Name__c</columns>
    <columns>Total_Order_Amount_USD__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>View Recently Created/Updated</label>
</ListView>